<resources>
    <string name="app_name">Base</string>

    <string name="app_tab1">首页</string>
    <string name="app_tab2">框架</string>
    <string name="app_tab3">高级</string>
    <string name="app_tab4">其他</string>

    <string name="app_tab1_title">Tab1</string>
    <string name="app_tab1_btn1">DataBinding</string>
    <string name="app_tab1_btn2">LiveData</string>
    <string name="app_tab1_btn3">BindingAdapter</string>
    <string name="app_tab1_btn4">Room</string>
    <string name="app_tab1_btn5">Paging</string>

    <string name="app_tab2_title">Tab2</string>
    <string name="app_tab2_btn1">LoadSir</string>
    <string name="app_tab2_btn2">EventBus</string>
    <string name="app_tab2_btn3">Zxing</string>
    <string name="app_tab2_btn4">X5WebView</string>

    <string name="app_tab3_title">Tab3</string>
    <string name="app_tab3_btn1">事件传递解析</string>
    <string name="app_tab3_btn2">自定义View详解</string>
    <string name="app_tab3_btn3">夜间模式切换</string>
    <string name="app_tab3_btn4">MotionLayout</string>

    <string name="app_tab4_title">Tab4</string>
    <string name="app_tab4_btn1">更新</string>
    <string name="app_tab4_btn2">登录</string>


    <string name="app_splash_text">倒计时3S</string>

    <string name="app_adapter_title">BindingAdapter</string>
    <string name="app_adapter_btn1">显示图片</string>
    <string name="app_adapter_btn2">显示圆角图片</string>
    <string name="app_adapter_btn3">显示圆形图片</string>

    <string name="app_data_title">DataBinding</string>
    <string name="app_live_title">DataBinding</string>
    <string name="app_data_btn1">显示数据</string>
    <string name="app_data_btn2">改变数据</string>
    <string name="app_data_btn3">隐藏数据</string>

    <string name="app_event_post_title">EventBus(发送者)</string>
    <string name="app_event_post_btn1">发送粘性消息</string>
    <string name="app_event_post_btn2">跳转到消息接收页面</string>
    <string name="app_event_post_btn3">非粘性消息测试文字</string>

    <string name="app_event_receive_title">EventBus(接收者)</string>
    <string name="app_event_receive_btn1">发送非粘性消息</string>
    <string name="app_event_receive_btn2">粘性消息测试文字</string>

    <string name="app_load_sir_title">LoadSir</string>
    <string name="app_paging_title">Paging</string>
    <string name="app_code_title">QRCode</string>

    <string name="app_login_title">登录案例</string>
    <string name="app_login_phone_hint">请输入手机号</string>
    <string name="app_login_code_hint">请输入验证码</string>
    <string name="app_login_btn">登录</string>
    <string name="app_login_info">登录信息: </string>

    <string name="app_zxing_title">Zxing</string>
    <string name="app_zxing_btn1">扫描二维码</string>
    <string name="app_zxing_btn2">生成二维码</string>
    <string name="app_zxing_btn3">生成二维码(logo)</string>
    <string name="app_zxing_btn4">识别图片二维码</string>

    <string name="app_room_title">Room</string>
    <string name="app_room_btn1">Insert</string>
    <string name="app_room_btn2">Query</string>
    <string name="app_room_btn3">Update</string>
    <string name="app_room_btn4">Delete</string>
    <string name="app_room_info">Person: </string>

    <string name="app_touch_title">Touch</string>
    <string name="app_touch_btn1">默认事件传递流程</string>
    <string name="app_touch_btn2">事件取消</string>
    <string name="app_touch_btn3">事件拦截</string>

    <string name="app_touch_cancel_title">TouchCancel</string>
    <string name="app_touch_cancel_btn">测试取消事件</string>

    <string name="app_touch_default_title">TouchDefault</string>
    <string name="app_touch_intercept_title">TouchIntercept</string>

    <string name="app_view_title">View</string>
    <string name="app_view_btn1">绘制基本图形</string>
    <string name="app_view_btn2">画布操作</string>
    <string name="app_view_btn3">绘制图片和文字</string>
    <string name="app_view_btn4">Path基本操作</string>
    <string name="app_view_btn5">自定义雷达图</string>

    <string name="app_view_base_title">绘制基本图形</string>
    <string name="app_view_base_btn1">画一个点</string>
    <string name="app_view_base_btn2">画多个点</string>
    <string name="app_view_base_btn3">画一条直线</string>
    <string name="app_view_base_btn4">画多条直线</string>
    <string name="app_view_base_btn5">画矩形</string>
    <string name="app_view_base_btn6">画圆角矩形</string>
    <string name="app_view_base_btn7">画椭圆</string>
    <string name="app_view_base_btn8">画圆</string>
    <string name="app_view_base_btn9">画圆弧</string>

    <string name="app_view_canvas_title">画布操作</string>
    <string name="app_view_canvas_btn1">平移</string>
    <string name="app_view_canvas_btn2">缩放</string>
    <string name="app_view_canvas_btn3">旋转</string>

    <string name="app_view_path_title">Path操作</string>
    <string name="app_view_path_btn1">基本操作1</string>
    <string name="app_view_path_btn2">基本操作2</string>
    <string name="app_view_path_btn3">基本操作3</string>
    <string name="app_view_path_btn4">基本操作4</string>

    <string name="app_view_picture_title">图片文字</string>
    <string name="app_view_picture_btn1">矢量图</string>
    <string name="app_view_picture_btn2">位图</string>
    <string name="app_view_picture_btn3">文字</string>
    <string name="app_view_radar_title">雷达图</string>

    <string name="app_web_back">返回</string>

    <string name="app_dialog_update_title">是否升级到1.0版本？</string>
    <string name="app_dialog_update_info">1: 测试111\n2: 测试222\n3: 测试333</string>
    <string name="app_dialog_update_cancel">取消</string>
    <string name="app_dialog_update_update">升级</string>

    <string name="app_menu_web1">刷新</string>
    <string name="app_menu_web2">分享</string>
    <string name="app_menu_web3">复制链接</string>
    <string name="app_menu_web4">浏览器打开</string>

    <string name="app_theme_title">夜间模式</string>
    <string name="app_theme_btn">切换夜间模式</string>

    <string name="app_motion_title">MotionLayout的使用</string>
    <string name="app_motion_btn1">案例1</string>
    <string name="app_motion_btn2">案例2</string>
    <string name="app_motion_btn3">案例3</string>
</resources>
