<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.hjc.baselib.widget.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:leftImage="@mipmap/icon_back"
            app:titleColor="@color/app_white"
            app:titleText="@string/app_view_title" />


        <Button
            android:id="@+id/btn_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_view_btn1"
            android:onClick="@{onClickListener}"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_canvas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_view_btn2"
            android:onClick="@{onClickListener}"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_view_btn3"
            android:onClick="@{onClickListener}"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/btn_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_view_btn4"
            android:onClick="@{onClickListener}"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/btn_radar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_view_btn5"
            android:onClick="@{onClickListener}"
            android:textAllCaps="false" />

    </LinearLayout>

</layout>