<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.hjc.baselib.widget.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:leftImage="@mipmap/icon_back"
            app:titleColor="@color/app_white"
            app:titleText="@string/app_touch_title" />


        <Button
            android:id="@+id/btn_touch_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{onClickListener}"
            android:text="@string/app_touch_btn1" />

        <Button
            android:id="@+id/btn_touch_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{onClickListener}"
            android:text="@string/app_touch_btn2" />

        <Button
            android:id="@+id/btn_touch_intercept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{onClickListener}"
            android:text="@string/app_touch_btn3" />

    </LinearLayout>

</layout>